# foo_subsonic

./: .gitignore  CMakeLists.txt  CoreEntity.h  ListviewHelper.h  README.md  SimpleHttpClientConfigurator.h  album.h  albumQueryThread.h  album_art.h  artist.h  artistUpdateThread.cpp  foo_subsonic.h  foo_subsonic.rc  foo_subsonic.sln  foo_subsonic.vcxproj  logindlg.h  playlist.h  preferences.cpp  preferences.h  search.h  simplehttpclient.h  sqliteCacheDb.cpp  sqliteCacheDb.h  stdafx.h  subsoniclibraryscanner.cpp  subsoniclibraryscanner.h  track.h  ui.cpp  xmlhelper.cpp
SDK/: .gitignore
foo_subsonic/: AlbumArtExtractorInstanceHttp.h  FakeAlbumArtExtractor.cpp  FakeAlbumArtExtractor.h  SimpleHttpClientConfigurator.h  artistUpdateThread.h  foo_subsonic.h  foo_subsonic.rc  foo_subsonic.vcxproj  initquit.cpp  logindlg.h  playlistQueryThread.h  playlistupdater.h  search.h  searchQueryThread.h  simplehttpclient.h  sqliteCacheDb.h  ui.h  xmlhelper.h
sqlite3/: .gitignore  sqlite3.vcxproj  sqlite3.vcxproj.filters
